--- a/Scripts/Reviews/reviewer_three.Rmd
+++ b/Scripts/Reviews/reviewer_three.Rmd
@@ -42,7 +42,10 @@ Pg 6, line 16: Is 23% the proportion of revenue from transboundary stocks? Or th
 
 - Pg 31-32: Does the TI capture the equality of sharing of the stock between two countries, or just how stable it is over time? The text claims an increasing TI means management is getting more challenging and a decreasing TI that the sharing between countries is becoming more stable (but not necessarily more equal)….is that the right interpretation? And how does that align with the example in Fig S6, where the TI seems to decline over the entire time series…..does that mean the sharing is becoming more stable?
 
-*Response:* William, thoughts?
+*Response:* Thank you for your comment. The transboundary index only captures the sharing stability over time. We had originally explored the directionality of the TI per stock, however, this was removed from the analysis as we rather focused on the "time of emergence" of the future TI from historical variability. Thus, since we do not talk about the directionallity of the TI (nor the TI *per se*) we have removed this sentence to avoid misunderstanding.
+
+The equality of sharing is measured by the Stock Share Ratio described under *Quantifying the intensity of transboundary stocks’ range shift.* 
+
 
 - I like the time of emergence concept and how it was applied in this analysis.
 
