Initial round of revisions done

--- a/Scripts/Reviews/reviewer_one.Rmd
+++ b/Scripts/Reviews/reviewer_one.Rmd
@@ -8,15 +8,15 @@ output: word_document
 
 I appreciated the opportunity to review “Imminent range shifts in transboundary fish stocks challenge their management under climate change.” The figures were quite informative and visually pleasing so I comment the authors on this effect. I had only two large scale questions or concerns the first of which was more related to the policy-side raised in the abstract. **Specifically thinking how many bilateral agreements exist, and which ones should be considered “ready” for addressing transboundary shifts ** In addition, **the issue of model-specific variance is not represented in the manuscript**. Variance as a topic is well discussed in the discussion but I am left wanting to know the error bounds around some of the numbers presented (# of stocks shifting, net gain / loss of stocks by EEZ, years of response as well). I think if these two concerns can be addressed, the manuscript would be of great interest to a wide audience. I have some finer scale points raised below as well.
 
-- Response: Thank you very much for commenting on our figures. Here, we provide responses to the two large scale questions you provide and below we respond the finer scale points. We hope that this clarifies all of your comments. 
+- **Response:** Thank you very much for commenting on our figures. Here, we provide responses to the two large scale questions you provide and below we respond the finer scale points. We hope that this clarifies all of your comments. 
 
- - **Regarding the bi-lateral agreements**, this is a great question that, unfortunately, we cannot respond at this moment. Currently, there is only one database on bi-lateral agreements produce by Oremus *et al* (2020). On their paper, the authors state "we analysed 27 publicly available international fisheries agreements in the South Pacific, Southeast Asia, South Asia, Northwest Africa, and Central America and the Caribbean" and " For each agreement, we recorded the following information... If relevant, to which specific stock or species the agreement pertained". However, the authors do not provide any information at the stock level and, unfortunately, they never respond/ did not shared their database with us.
+ - **Regarding the bi-lateral agreements**, this is a great question that, unfortunately, we cannot respond at this moment. Currently, there is only one database on bi-lateral agreements produce by Oremus *et al* (2020). On their paper, the authors state "we analysed 127 publicly available international fisheries agreements in the South Pacific, Southeast Asia, South Asia, Northwest Africa, and Central America and the Caribbean" and " For each agreement, we recorded the following information... If relevant, to which specific stock or species the agreement pertained". We contacted Dr. (Kimberly) Oremus who provided the provided the mentioned dataset. However, non of the 127 treaties have identified subjects at the species level (except for bigeye, skipjack and yellowtail tunas).
 
-We hope that the reviewer understands the complexity of building such database and that this exercise falls outside the scope and stage of our current analysis. We agree that having such information would increase the manuscript impact, but, would not necessarily directly impact our results nor the message we want to covein (Ultimately oremus *et at* state it very clearly in their paper, "None of the 127 agreements contains language that is directly related to climate change, range shifts or stock exits").
+We hope that the reviewer understands the complexity of building such database and that this exercise falls outside the scope and stage of our current analysis. We agree that having such information would increase the manuscript impact, but, would not necessarily directly impact our results nor the message we want to covein (Ultimately Oremus *et at* state it very clearly in their paper, "None of the 127 agreements contains language that is directly related to climate change, range shifts or stock exits").
 
-Oremus KL, Bone J, Costello C, Molinos JG, Lee A, Mangin T, Salzman J. 2020. Governance challenges for tropical nations losing fish species due to climate change. Nature Sustainability 6:1–4. Nature Publishing Group. Available from https://www.nature.com/articles/s41893-020-0476-y.
+ - Oremus KL, Bone J, Costello C, Molinos JG, Lee A, Mangin T, Salzman J. 2020. Governance challenges for tropical nations losing fish species due to climate change. Nature Sustainability 6:1–4. Nature Publishing Group.
 
- - **Regarding model-specific variance.** For this paper we used one climate model (the GFDL) forced following one climate change scenario (RCP 8.5) to couple with one species distribution model. For this reason, providing quantitative upper and lower bounds of our results is not possible and would require substantial extra computation. However, because we have 10 different runs of the GFDL and employ the time of emergence concept, we are capable of providing a less conservative estimate of the numbers you mention (i.e., the number of shifting stocks and EEZs). This was originally presented in the methods section as a sensitivity analysis and has now been moved to the Methods section of the main paper (**NOTE TO CO-AUTHORS**: Should we include this in the results?). It reads on line *XXX* of page *XX*: *We also computed a less conservative estimation of shifting transboundary stocks by including a threshold of one standard deviation (i.e., representing a probability of 68% that the stock had shifted from natural variation; see methods). In this case, the global average shift in the shared distribution of transboundary stocks is 2029 $\pm$ 27 years, a difference of about 7 years (Fig. S8). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. S2 and S8).*
+ - **Regarding model-specific variance.** For this paper we used one climate model (the GFDL) forced following one climate change scenario (RCP 8.5) to couple with one species distribution model. For this reason, providing quantitative upper and lower bounds of our results is not possible and would require substantial extra computation. However, because we have 10 different runs of the GFDL and employ the time of emergence concept, we are capable of providing a less conservative estimate of the numbers you mention (i.e., the number of shifting stocks and EEZs). This was originally presented in the methods section as a sensitivity analysis and has now been moved to the Methods section of the main paper (**NOTE TO CO-AUTHORS**: Should we include this in the results or leave it in the methods?). It reads on line *XXX* of page *XX*: *We also computed a less conservative estimation of shifting transboundary stocks by including a threshold of one standard deviation (i.e., representing a probability of 68% that the stock had shifted from natural variation; see methods). In this case, the global average shift in the shared distribution of transboundary stocks is 2029 $\pm$ 27 years, a difference of about 7 years (Fig. S8). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. S2 and S8).*
 
 
 P1L12 – “between neighbouring countries” – Is this not redundant with “transboundary?” Are you only examining stocks that currently cross jurisdictional boundaries? After further reading / review, it seems like this delineation would be useful to make explicit in the abstract.
@@ -62,7 +62,7 @@ P10L6-7 – “with higher gains identified in warmer colors” Please be specif
 
 P12L2-3 – “As transboundary stocks continue to shift, such international disputes are likely to increase in frequency and requiring a revision of management plans (9, 28).” I do not disagree with this statement but it rings a bit hollow without knowing which country management plans need revision. I am not asking the authors to fully assess this literature but instead provide examples of successful management plans in response to transboundary shifts and examples those that are existing that would need to be revised.
 
-- **Response:** Thank you for this comment. We have eddited the paragraph starting at line **13** of page **12** to reflect this comment. 
+- **Response:** Thank you for this comment. We have edited the paragraph starting at line **13** of page **12** to reflect this comment. 
 
 Pgs 12-13 deal with this a bit but this could use more context.
 
