Fixed images links

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -3,7 +3,8 @@ title: "Imminent range shifts in transboundary fish stocks challenge their manag
 author: "SUBMITTED MANUSCRIPT. DO NOT SHARE."
 date: "Affiliations: ^1^Institute for the Oceans and Fisheries, University of British Columbia, Vancouver, Canada. ^2^Climate and Environmental Physics, Physics Institute, University of Bern. ^3^Oeschger Centre for Climate Change Research, University of Bern, Switzerland. ^4^School of Environmental Sciences, University of Liverpool. ^5^Stanford Center for Ocean Solutions, Stanford University, Stanford, United States"
 subtitle: "Juliano Palacios-Abrantes*^1^, Thomas L. Frölicher^2,3^, Gabriel Reygondeau^1^, U. Rashid Sumaila^1^, Alessandro Tagliabue^4^, Colette C.C. Wabnitz^1,5^, and William W.L. Cheung^1^"
-output: bookdown::pdf_document2
+# output: bookdown::pdf_document2
+output: bookdown::word_document2
 reference_docx:  ../References/sci_template.docx
 bibliography: ../References/ToE_Ref.bib
 csl: ../References/science.csl
@@ -81,7 +82,7 @@ Most fisheries management is poorly adapted to address species’ shifting distr
 
 Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth System Model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries under a high greenhouse gas emissions scenario (see Methods **and Supplemental Materials**). We then estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. \@ref(fig:toeFigure1N)) and the intensity of this shift (i.e., time of emergence and stock share ratio; see Methods **and Supplemental Materials**). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
 
-```{r toeFigure1N, eval = F,  echo = F, fig.width=14, fig.height=10, fig.cap =  "Schematic diagram of the transboundary index (TI) to determine the time of emergence of transboundary stocks. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighboring Exclusive Economic Zones sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overshoots historical values (Bottom panel)."}
+```{r toeFigure1N, eval = T,  echo = F, fig.width=14, fig.height=10, fig.cap =  "Schematic diagram of the transboundary index (TI) to determine the time of emergence of transboundary stocks. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighboring Exclusive Economic Zones sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overshoots historical values (Bottom panel)."}
 
 img <- readPNG("../Figures/Fig1.png")
 grid.raster(img)
@@ -104,7 +105,7 @@ grid.raster(img)
 ```
 
 
-The median year in which transboundary stocks experience a range shift varied significantly according to the species’ habitat association (Methods; Kruskal-Wallis, $X^2$ = 203.85, DF = 93, *p* < 0.001; Tables \@ref(tab:toeTableS1), \@ref(tab:toeTableS2) and Fig. \@ref(fig:toeFigureS1)) and geographic region of the neighboring EEZs (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; Table S3 and Fig. 2A). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; Tables \@ref(tab:toeTableS2 and \@ref(tab:toeTableS3) than almost any other region (Figs. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureS1) and \@ref(fig:toeFigureS2)). In contrast, EEZs and stocks located in temperate regions like northern Europe and eastern Asia are projected to experience much later range shifts. Stocks in countries such as Brazil and New Zealand are not projected to experience range shifts beyond natural variability (Fig. \@ref(fig:toeFigure2)A).
+The median year in which transboundary stocks experience a range shift varied significantly according to the species’ habitat association (Methods; Kruskal-Wallis, $X^2$ = 203.85, DF = 93, *p* < 0.001; Tables \@ref(tab:toeTableS1), \@ref(tab:toeTableS2) and Fig. \@ref(fig:toeFigureS1)) and geographic region of the neighboring EEZs (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; Table S3 and Fig. 2A). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; Tables \@ref(tab:toeTableS2) and \@ref(tab:toeTableS3) than almost any other region (Figs. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureS1) and \@ref(fig:toeFigureS2)). In contrast, EEZs and stocks located in temperate regions like northern Europe and eastern Asia are projected to experience much later range shifts. Stocks in countries such as Brazil and New Zealand are not projected to experience range shifts beyond natural variability (Fig. \@ref(fig:toeFigure2)A).
 
 On average, shifting transboundary stocks represented 23% (s.d. $\pm$  22%) of yearly fishing revenue from fisheries targeting **transboundary** stocks within global EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). **From all fisheries targeting transboundary stocks between 2004 and 2010 in the global EEZs, shifting stocks represented on average 23% (s.d. $\pm$  22%) of the yearly revenue (Fig. \@ref(fig:toeFigure2)A).** However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
 
@@ -169,20 +170,19 @@ Different levels of uncertainty exist in the projected emergence of environmenta
 
 The global community has set the ambitious goal of managing all fisheries sustainably (SDG 14 – Life below water) by 2030; achieving this goal would have clear benefits for a number of other societal goals [@UnitedNations2018; @Singh:2017ds]. Preparing anticipatory policies to deal with shifting transboundary stocks is key to achieving the SDGs and ensuring effective governance of the world’s fisheries [@Pinsky:2018cb; @Oremus:2020id; @Pecl:2017hu]. Here, we implemented two steps to demonstrate how to achieve sustainable transboundary fisheries in a changing world [@Link:2010ei]. First, we identified the transboundary stocks that would likely see shifts in their shared distribution compared to their historical average and the year in which such shifts are predicted to occur. Second, we estimated the intensity of such change. Our results have direct implications for ocean governance as the data provided can inform regional management bodies and member countries to anticipate the likely climate-driven challenges to transboundary fisheries management. While future studies, specifically at more localized scale, will provide valuable nuance in designing effective policies, our results provide an important baseline on which to build when preparing ocean governance for shifting transboundary stocks [@Pinsky:2018cb; @PalaciosAbrantes:2020tv]. Our findings emphasize recent calls for the urgent adoption of measures in support of more adaptive, flexible fisheries management and governance to support resilient fisheries and durable management systems [@Pinsky:2018cb; @Pinsky:2020jx; @Oremus:2020id].
 
-\clearpage
-
-**References**
-
 **Methods **
 
 We estimate the year in which 663 transboundary species (i.e., 9,132 stocks) previously identified by Palacios-Abrantes *et al.* (2020) [@PalaciosAbrantes:2020tv] would undergo changes in their shared distribution beyond historical variation and the intensity of said changes (see the Supplementary Materials). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas). We defined the boundaries of the world’s EEZs using the Sea Around Us (http://www.seaaroundus.org/) spatial division, noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS5)) including island territories (see the Supplementary Materials - *Databases and species selection*).
 
 We coupled a mechanistic population dynamic model (i.e., the DBEM) with an Earth System Model (i.e., the Geophysical Fluid Dynamics Laboratory Earth system model, GFDL) to project the future global distribution of transboundary stocks’ under climate change (see the Supplementary Materials). Roughly, the DBEM algorithm uses historical species distribution and catch, eco-physiology, habitat suitability and spatial population dynamics to project abundance and potential fisheries catches in a $0.5^o$ x $0.5^o$ grid-cell of the world [@Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd]. The DBEM was driven for ten different versions of the GFDL (i.e., a ten-ensemble member simulation) each of them representing an unique atmosphere and ocean state at the start of the simulation [@Dunne:2012bo; @Dunne:2013db; @Frolicher:2020cc]. The simulations were run under historical forcing until 2005, afterwards and until 2100, simulations followed a high greenhouse gas emissions scenario, Representative Concentration Pathway 8.5 (RCP 8.5) [@Riahi:2011dk].
 
-Furthermore, we developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock's abundance centroid and that of the EEZs that share such stock (Fig. \@ref(fig:toeFigure1)A)). We used the ten-ensemble-member approach to determine the historical internal variability of the stock (i.e., 1951 to 2005) and apply the concept of *time of emergence*  to determine a shift in a stock’s shared distribution (see the Supplementary Materials - *Calculating shifts in the shared distribution of transboundary stocks*). The time of emergence (i.e., the year a transboundary stocks shifted from its historical distribution) was defined as the first year the index was beyond two standard deviations from the historical internal variability for a 95% probability of "emergence" (See Supplemental Material - Equ. \@ref(equ:four)). We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
+Furthermore, we developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock's abundance centroid and that of the EEZs that share such stock (Fig. \@ref(fig:toeFigure1)A)). We used the ten-ensemble-member approach to determine the historical internal variability of the stock (i.e., 1951 to 2005) and apply the concept of *time of emergence*  to determine a shift in a stock’s shared distribution (see the Supplementary Materials - *Calculating shifts in the shared distribution of transboundary stocks*). The time of emergence (i.e., the year a transboundary stocks shifted from its historical distribution) was defined as the first year the index was beyond two standard deviations from the historical internal variability for a 95% probability of "emergence" (See Supplemental Material - Equ. \@ref(eq:four)). We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
 
 Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Clark:1975uu; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (See Supplemental Material - *Quantifying the intensity of transboundary stocks’ range shift*). A threat point is defined as the minimum payoff a player would be willing to receive to cooperate in a game-theoretic model. Here, we define the minimum payoff as two standard deviations from the historical catch proportion (average of 1951 to 2005) that each EEZ had for each stock. This assumes that countries are adapted to the historical sharing but no country will be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. Finally, we computed changes in the catch proportion that were below the threat point of the neighbouring EEZs sharing a stock for two time periods relative to the historical proportion; 2030 (2021 and 2040) matching the UN 2030 Agenda and a late date (2040 to 2050).
 
+\clearpage
+
+**References**
 
 <div id="refs"></div>
 
