--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -72,7 +72,7 @@ The DBEM was driven by simulated ocean conditions from a ten-ensemble member sim
 
 _**Calculating an index of transboundary range shift**_
 
-We developed a Transboundary Index (TI) to evaluate range shifts in the shared distribution of transboundary stocks under climate change. This index represents the shift in the distribution centroid of a transboundary stock relative to the centroid of neighboring EEZs that share this stock (Fig. \@ref(fig:toeFigureS6)). The centroid of a transboundary stock was determined by the average ($\mu$) latitude ($lat_{ts}$) and longitude ($lon_{ts}$) across grid cells within the neighboring EEZs sharing the stock. Therefore,
+We developed a Transboundary Index (TI) to evaluate range shifts in the shared distribution of transboundary stocks under climate change. This index represents the shift in the distribution centroid of a transboundary stock relative to the centroid of neighboring EEZs that share this stock (Fig. \@ref(fig:toeFigure1)). The centroid of a transboundary stock was determined by the average ($\mu$) latitude ($lat_{ts}$) and longitude ($lon_{ts}$) across grid cells within the neighboring EEZs sharing the stock. Therefore,
 
 \begin{equation}
 \begin{split}
@@ -106,7 +106,7 @@ The index was smoothed to a 10-year average to reduce interannual variability [@
 
 _**Calculating shifts in the shared distribution of transboundary stocks**_
 
-Knowing the point in time at which the distribution of a shared stock will diverge from historical variability is important to inform decision makers by when, ideally, climate adaptation plans will need to have been implemented [@Link:2010ei]. To that end, we adopted the concept of time of emergence, commonly applied to multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev] and defined as the moment in time when a signal (e.g., future anthropogenic trend) emerges from the background noise of natural variability (i.e., historical natural variation) [@Hawkins:2012hc]. The premise behind time of emergence is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background noise of natural climate variability [@Hawkins:2012hc]. The TI’s natural internal variability was estimated from 1951 to 2005 ($TI_\sigma$) across ensemble members, and the TI signal represents the average TI across ensemble members from 2006 to 2100 ($TI_\mu$). We then set a threshold of two times $TI_\sigma$ representing a probability of 95% that the transboundary index has “emerged” from historical variability (See Fig. \@ref(fig:toeFigureS6) for a graphical description):
+Knowing the point in time at which the distribution of a shared stock will diverge from historical variability is important to inform decision makers by when, ideally, climate adaptation plans will need to have been implemented [@Link:2010ei]. To that end, we adopted the concept of time of emergence, commonly applied to multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev] and defined as the moment in time when a signal (e.g., future anthropogenic trend) emerges from the background noise of natural variability (i.e., historical natural variation) [@Hawkins:2012hc]. The premise behind time of emergence is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background noise of natural climate variability [@Hawkins:2012hc]. The TI’s natural internal variability was estimated from 1951 to 2005 ($TI_\sigma$) across ensemble members, and the TI signal represents the average TI across ensemble members from 2006 to 2100 ($TI_\mu$). We then set a threshold of two times $TI_\sigma$ representing a probability of 95% that the transboundary index has “emerged” from historical variability (See Fig. \@ref(fig:toeFigure1) for a graphical description):
 
 
 <!-- $EmergenceTIndex = \frac{\mu_{TI[t]}}{SD_{TI_{th}}}$ -->
@@ -124,7 +124,7 @@ _**Quantifying the intensity of transboundary stocks’ range shift**_
 
 Here, we adopt the concept of threat point to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs. The concept of threat point comes from Game Theory and has been widely used in shared fisheries management [@Bailey:2010ga; @Sumaila:2013hv; @Sumaila:2020tp; @Clark:1975uu; @Munro:1979dg]. In a game theoretic model, a player’s strategy (e.g., to act cooperatively or not) will have direct consequences for other players, which, in turn, will affect the overall outcome of the game [@Bailey:2010ga]. Cooperation will often result in the maximization of benefits for the system rather than for individual players. However, for a cooperative strategy to work, the benefit a player gets must not be less than the benefit under a non-cooperative strategy. Thus, the “threat point” is defined as the minimum payoff a player is willing to receive to cooperate in a game-theoretic model [@Nash:1953vr]. We define the threat point as the minimum required catch proportion of a transboundary stock within an EEZ for a country to engage in cooperative management with their sharing neighbor [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. **Any proportion below the defined threat point would result in the unilateral management of the stock assuming that no country will be willing to engage in cooperative management if the future catch proportion of the transboundary stock is lower than it has ever been.**
 
-First, we estimated **the catch proportion as the** stock share ratio (SSR) of each transboundary stock shared by neighboring nations between 1951 and 2100. We did this by aggregating the projected catch within the $0.5^{\circ}$ x $0.5^{\circ}$ grid cells in which the stock is present across neighboring EEZs, and then calculated the proportion of the stock's catch held within each EEZ [@PalaciosAbrantes:2020tv]. Second, to reduce the effects of variability, we averaged the calculated proportion of stock occupying a given EEZ into three time periods: the historical time period ($SSR_{th}$) from 1951 to 2005, and two future periods, the early $21^{st}$ century, between 2021 and 2040 ($SSR_{te}$), and the mid $21^{st}$ century, defined as the average of 2041 to 2060 ($SSR_{tm}$). These future time periods were chosen to correspond to the challenges of achieving fisheries-relevant UN-SDGs by 2030 (i.e., the 2030 Agenda), such as SDG 14.4 (end overfishing), SDG 2.4 (ensure sustainable food production systems) and SDG 1.2 (poverty reduction) [@Singh:2017ds; @UnitedNations:1Qe8KIcN]. The analysis was replicated for projected stock distributions from each of the ten ensemble members and results were averaged across ensemble members. Third, we defined a threat point for each EEZ’s stock as $SSR_{th} \pm 2 \sigma$, where  is the standard deviation of $SSR_{th}$. Thus, a change of SSR beyond an EEZ’s threat point happens when the future SSR exceeds two standard deviations of the historical variations in SSR (i.e., when $SSR_{et} \geqq (SSR_{th} + 2 \sigma$) or $SSR_{e,m} \leqq (SSR_{th} - \sigma)$. Finally, we estimated the percentage change in SSR ($\Delta SSR$) of each future time period ($SSR_{tf}$) relative to the historic time period $SSR_{th}$ for each stock whose share ratio exceeded the threat point following [@PalaciosAbrantes:2020tv];
+First, we estimated **the catch proportion as the** stock share ratio (SSR) catch of each transboundary stock shared by neighboring nations between 1951 and 2100. We did this by aggregating the projected catch within the $0.5^{\circ}$ x $0.5^{\circ}$ grid cells in which the stock is present across neighboring EEZs, and then calculated the proportion of the stock's catch held within each EEZ [@PalaciosAbrantes:2020tv]. Second, to reduce the effects of variability, we averaged the calculated proportion of stock occupying a given EEZ into three time periods: the historical time period ($SSR_{th}$) from 1951 to 2005, and two future periods, the early $21^{st}$ century, between 2021 and 2040 ($SSR_{te}$), and the mid $21^{st}$ century, defined as the average of 2041 to 2060 ($SSR_{tm}$). These future time periods were chosen to correspond to the challenges of achieving fisheries-relevant UN-SDGs by 2030 (i.e., the 2030 Agenda), such as SDG 14.4 (end overfishing), SDG 2.4 (ensure sustainable food production systems) and SDG 1.2 (poverty reduction) [@Singh:2017ds; @UnitedNations:1Qe8KIcN]. The analysis was replicated for projected stock distributions from each of the ten ensemble members and results were averaged across ensemble members. Third, we defined a threat point for each EEZ’s stock as $SSR_{th} \pm 2 \sigma$, where  is the standard deviation of $SSR_{th}$. Thus, a change of SSR catch beyond an EEZ’s threat point happens when the future SSR catch exceeds two standard deviations of the historical variations in SSR (i.e., when $SSR_{et} \geqq (SSR_{th} + 2 \sigma$) or $SSR_{e,m} \leqq (SSR_{th} - \sigma)$. Finally, we estimated the percentage change in SSR ($\Delta SSR$) of each future time period ($SSR_{tf}$) relative to the historic time period $SSR_{th}$ for each stock whose share ratio exceeded the threat point following [@PalaciosAbrantes:2020tv];
 
 <!-- $$ \Delta{SSR_{e,m}} = \frac{(SSR_{f}-SSR_{th})}{SSR_{th}}* 100 $$ -->
 
