Updates to reviewers responses

--- a/Scripts/Reviews/reviewer_three.Rmd
+++ b/Scripts/Reviews/reviewer_three.Rmd
@@ -46,11 +46,11 @@ I like the time of emergence concept and how it was applied in this analysis.
 
 I also like the idea of the threat point analysis to identify when a stock is sufficiently shared with another country to motivate cooperative management. However, I was confused by how the threat point was implemented using the stock share ratio (SSR) – why is the threat point determined relative to the historic SSR? I assume the idea of a threat point from game theory is based on the proportion of catch or value that is shared, and I don’t see how the starting point SSR would be relevant? Maybe I misunderstood what the authors did here, but conceptually/theoretically I’m not understanding the rationale for their approach so at the very least it needs more explanation and justification. But I’m concerned it actually needs to be based on a theoretical proportion, not a quantity interpreted relative to a historic proportion.
 
-- **Response:** We have revised the text to clarify this point as we believe the reviewer misunderstood our approach. We ofer and explanation below, and inlcuded some more detailed in the methods of the main manuscript (see page *XXX*, line *XX*) and in the Supplemental Material (see page *XXX* line *XX*). 
+- **Response:** We have revised the text to clarify this point as we realize from the reviewer comment that we have not been clear enough. We offer an explanation below, and included some more details in the methods section of the main text (see page *XXX*, line *XX*) and in the Supplemental Materials (see page *XXX* line *XX*).
 
-  The reviewer is correct to "*assume the idea of a threat point from game theory is based on the proportion of catch or value that is shared"* and that is exactly what we mean here with the stock share ratio (SSR). Here, the SSR represents the proportion of a transboundary stock's catch that each country has per year. We do realize we loosly used the concepts of SSR and catch proportion when they mean the same thing. This has been clarified in the text.
+The reviewer is correct to "*assume the idea of a threat point from game theory is based on the proportion of catch or value that is shared"* and that is exactly what we mean here with the stock share ratio (SSR). Here, the SSR represents the proportion of a transboundary stock's catch that each country takes each year. We do realize we loosely used the concepts of SSR and catch proportion interchangeably when they mean the same thing. This has been now clarified in the text.
 
-  If we think on two countries managing a transboundary stock from 1951 to 2000, we can assume that both countries are adapted to the historical stock share ratio. This is not a single value but a series of combinations (e.g., year 1 40/50, year 2 30/60, year 3 50/50... n). Since management continues over the historical time period, we can assume both countries are happy with the historic SSRs. However, as game theory states, for a cooperative strategy to work, the benefit a player gets (in this case the SSR) must not be less than the benefit under a non-cooperative strategy. While we could set the threat point as a theoretical proportion as suggested by the reviewer, but if we assume countries are collaborating, then the threat point can be the minimum historic SSR that each country had (in our case SSR $\pm$ 2 s.d for a more conservative scenario; see equation **X**). This assumes that no country will be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been. This method was previously applied by Palacios-Abrantes *et al.* (2020) and Sumaila *et al* (2020).
+If we think on two countries managing a transboundary stock from 1951 to 2000, we can assume that both countries are adapted to the historical stock share ratio. This is not a single value but a series of combinations of catch proportions (e.g., year 1 40/50, year 2 30/60, year 3 50/50... n). Since management continues over the historical time period, we can assume that both countries are happy with the historic SSRs catch. However, as game theory states, for a cooperative strategy to work, the benefit a player gets (in this case the SSR catch) must not be less than the benefit under a non-cooperative strategy. While we could set the threat point as a theoretical proportion as suggested by the reviewer, but if we assume countries are collaborating, then the threat point can be the minimum historic SSR catch that each country had (in our case SSR catch $\pm$ 2 s.d for a more conservative scenario; see equation **X**). This assumes that no country will be willing to collaborate if the future catch proportion of the transboundary stock it will recieve is lower than it has ever been. This method was previously applied by Palacios-Abrantes *et al.* (2020) and Sumaila *et al* (2020).
 
  - Palacios-Abrantes J, Sumaila UR, Cheung WWL. 2020. Challenges to transboundary fisheries management in North America under climate change. Ecology and Society 25:art41–17.
 
